--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auth",
   "scripts": {
-    "dev": "bun run --hot src/server.ts"
+    "dev": "nodemon"
   },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -9,6 +9,8 @@
     "dotenv": "^17.2.3",
     "hono": "^4.10.4",
     "mongodb": "^6.20.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
